2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/create_integria_incident.sh: Fixed an error in help text.

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/integria_plugin/integria_plugin.sh,
	util/plugin/babel_plugin/babel_plugin.sh: Fixed an error with wget call.

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/create_integria_incident.sh: Create script to create a new
	incident in Integria, this script could be used as an action in Pandora FMS.

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/integria_plugin/,
	util/plugin/integria_plugin/plugin_definition.ini,
	util/plugin/integria_plugin/integria_plugin.sh,
	util/plugin/integria_plugin/README: Created integria plugin for Pandora.

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/babel_plugin/babel_plugin.sh: Fixed an error in help text
	with a wrong parameter.
	* util/plugin/babel_plugin/README: Improved README text.

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/babel_plugin/README: Create README file for babel plugin

2011-03-15 Dario Rodriguez <dario.rodriguez@artica.es>

	*util/plugin/babel_plugin/plugin_definition.ini, 
	util/plugin/babel_plugin/babel_plugin.sh: Created plugin to connect 
	Pandora FMS with Babel Enterprise. You can create a pspz package for
	this plugin.

2011-03-15  Sancho Lerena <slerena@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a typo in interface
	detection :-(

2011-03-14  Raúl Mateos <raulolfpandora@gmail.com>

	* lib/PandoraFMS/Config.pm, lib/PandoraFMS/Core.pm,
	lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/DB.pm,
	lib/PandoraFMS/Tools.pm, lib/PandoraFMS/WMIServer.pm: Cleared code and
	updated year.

2011-03-09  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf
	lib/PandoraFMS/Config.pm
	lib/PandoraFMS/DataServer.pm: Added support for Openstreetmaps API for
	reverse geolocation. 
